fix align

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 .container-flex {
     height: 60px;
-    background-color: rgb(4, 18, 123);
+    background-color: rgb(3, 11, 68);
     display: flex;
     align-items: center;
     gap: 16px;
@@ -20,7 +20,7 @@
     .item-two {
         width: 50px;
         height: 30px;
-        background-color: rgb(8, 2, 73);
+        background-color: rgb(1, 0, 10);
         border-radius: 6px;
         display: flex;
         justify-content: center;
@@ -31,7 +31,7 @@
         input {
             width: 240px;
             height: 30px;
-            background-color: rgb(4, 18, 123);
+            background-color: rgb(3, 11, 68);
             border: 1px solid white;
             border-radius: 6px;
         }
@@ -44,7 +44,7 @@
 
     .item-five {
         margin-left: auto;
-        margin-right: 6px;
+        margin-right: 48px;
 
         button {
             width: 160px;
@@ -79,7 +79,7 @@ table {
     border-collapse: collapse;
 
     thead {
-        background-color: rgb(4, 18, 123);
+        background-color: rgb(3, 11, 68);
 
         th {
             height: 40px;
@@ -111,11 +111,11 @@ table {
         }
 
         tr:nth-child(odd) {
-            background-color: rgb(104, 120, 242);
+            background-color: rgb(51, 58, 110);
         }
 
         tr:nth-child(even) {
-            background-color: rgb(4, 18, 123);
+            background-color: rgb(3, 11, 68);
         }
 
         .container-product {
@@ -138,9 +138,9 @@ table {
             justify-content: center;
             align-items: center;
             border-radius: 50px;
-            color: black;
+            color: rgb(49, 120, 4);
             height: 30px;
-            background-color: rgb(0, 255, 72);
+            background-color: rgb(211, 246, 223);
         }
 
         .fa-trash {
@@ -156,7 +156,7 @@ table {
     }
 
     tfoot {
-        background-color: rgb(4, 18, 123);
+        background-color: rgb(3, 11, 68);
         
         tr {
             height: 80px;
